testcases/negative/incomplete_vcard.vcf
BEGIN:VCARD
VERSION:4.0
